--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@300;500;600;700&family=Roboto:wght@300;400;500;700&family=Ubuntu:ital,wght@0,400;0,500;0,700;1,300&display=swap');
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family:'Manrope', sans-serif;
+}
+a{
+    text-decoration: none;
+    color:#369FFF;
+}
+i{
+    font-size: 24px;
+}
+.container{
+    display: grid;
+    grid-template-columns: 1fr 3fr 2fr;
+}
+.container .left-section{
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 0;
+}
+.container .left-section .logo{
+    display: flex;
+    align-items: center;
+    gap:10px;
+}
+.container .left-section .logo img{
+    width:80px;
+    height:80px;
+    object-fit: cover;
+}
+.container .left-section .logo a{
+    font-weight: 800;
+    font-size:20px;
+    color:#006ED3;
+}
+.menu-btn{
+    width:32px;
+    height: 32px;
+    align-items:center;
+    justify-content: center;
+    border:none;
+    background-color: #D1E6F9;
+    border-radius: 6px;
+    cursor:pointer;
+    display:none;
+}
+.container .left-section .sidebar{
+    display:flex;
+    flex-direction: column;
+    gap:20px;
+}
+.container .left-section .sidebar .item{
+    display:flex;
+    gap:20px;
+    cursor: pointer;
+}
+.container .left-section .sidebar i{
+    color:#BDBDBD;
+    transition: all 0.3s ease;
+}
+.container .left-section .sidebar a{
+    display: flex;
+    align-items: center;
+    gap:30px;
+    font-size: 14px;
+    color: #BDBDBD;
+    position: relative;
+    transition: all 0.3s ease;
+}
+.container .left-section .pic img{
+    width:100px;
+}
