--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ main .separator .info{
     align-items: center;
     gap:30px;
 }
-main .separator .info h3{
+main .separator .info h5{
     font-size: 30px;
 }
 main .separator .info a{
@@ -176,4 +176,70 @@ main .analytics{
     grid-template-columns: 1fr 1fr;
     gap:20px;
     margin-top: 20px;
+}
+main .analytics .item{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    height:140px;
+    min-width:214px;
+    padding:20px;
+    border-radius:20px;
+}
+main .analytics .item .progress{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+main .analytics .item .progress .info h5{
+    color:#000;
+    font-size: 20px;
+    font-weight: bold;
+}
+main .analytics .item .progress .info p{
+    color:#fff;
+    font-size: 12px;
+}
+main .analytics .item .progress .progress-bar{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    width:52px;
+    height:52px;
+    border-radius: 50%;
+}
+main .analytics .item:nth-child(1) .progress .progress-bar{
+    background: radial-gradient(closest-side, #006ED3 79%, transparent 80% 100%)
+    , conic-gradient(#208BEE 25%, #fff 0%);
+}
+main .analytics .item:nth-child(2) .progress .progress-bar{
+    background:radial-gradient(closest-side,#FF993A 79%, transparent 80% 100%),
+    conic-gradient(#FF7E07 50%, #fff 0%);
+}
+main .analytics .item:nth-child(3) .progress .progress-bar{
+    background:radial-gradient(closest-side, #8ac53e 79%,
+    transparent 80% 100%), conic-gradient(#6eb33d 75%, #fff 0%);
+}
+main .analytics .item:nth-child(4) .progress .progress-bar{
+    background: radial-gradient(closest-side, #ffd043 79%, transparent 80% 100%),
+    conic-gradient(#ffc000 25%, #fff 0%);
+}
+main .analytics .item .progress .progress-bar::before{
+    font-size: 10px;
+    color:#fff;
+}
+main .analytics .item:nth-child(1) .progress .progress-bar::before,
+main .analytics .item:nth-child(4) .progress .progress-bar::before{
+    content: "75%";
+}
+main .analytics .item:nth-child(2) .progress .progress-bar::before{
+    content:"50%";
+}
+main .analytics .item:nth-child(3) .progress .progress-bar::before{
+    content: "25%";
+}
+main .analytics .item i{
+    font-size: 80px;
+    color:#fff;
 }
