--- a/styles.css
+++ b/styles.css
@@ -277,6 +277,38 @@ main .planning .item{
     display:flex;
     align-items: center;
     justify-content: space-between;
+    padding: 20px;
+    background-color: #F7F7F7;
+    border-radius: 20px;
+}
+main .planning .item .left{
+    display:flex;
+    align-items:center;
+    gap:10px;
+}
+main .planning .item .left .icon{   
+    width:50px;
+    height:50px;
+    border-radius: 12px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main .planning .item:nth-child(1) .left .icon{
+    background: #D1E6F9;
+}
+main .planning .item:nth-child(1) .left .icon{
+    background:#369FFF
+}
+main .plannning .item:nth-child(2) .left .icon{
+    background: #F9E5D2;
+}
+main .planning .item:nth-child(3) .left .icon{
+    background: #FF993A;
+}
+main .planning .item:nth-child(4) .left .icon{
+    background: #D1E6F9;
 }
 
  
