added some features

--- a/styles.css
+++ b/styles.css
@@ -473,10 +473,83 @@ main .planning .item > i{
  }
  .container .right-section .weekly .progress-bar::before{
     content: "3/4";
-    
+    font-size:14px;
+    color:#000;
  }
- 
-  
+@media screen and (max-width:1200px){
+    .container{
+        grid-template-columns: 1fr 6fr 5fr;
+    }
+    .container .left-section,
+    .container main,
+    .container .right-section{
+        padding:20px 20px 0 20px;
+    }
+    .container .left-section .logo a,
+    .container .left-section .sidebar a,
+    .container .left-section .pic img,
+    .container .left-section .upgrade{
+        display:none ;
+
+    }
+}
+@media screen and (max-width:992px){
+    .container{
+        grid-template-columns:1fr 1fr;
+    }
+    .container .left-section{
+        position:fixed;
+        height:60vh;
+        background-color: #fff;
+        box-shadow:0 4px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease;
+        top:-60vh;
+    }
+    .container .left-section .logo{
+        flex-direction: column;
+        gap:20px;
+    }
+    .container .left-section .logo .menu-btn{
+        display:flex;
+    }
+    .container .left-section .logo .menu-btn,
+    main header .menu-btn{
+        display:flex;
+    } 
+    main h5{
+        font-size: 16px;
+    }
+    main .separator .info{
+        gap:15px;
+    }
+    main .separator .info h3,
+    .container .right-section .separator h4{
+        font-size: 20px;
+    }
+    main .analytics .item{
+        min-width:160px;
+    }
+    main .analytics .item i{
+        display:none;
+    }
+    main .planning{
+        grid-template-columns: 1fr;
+        gap:10px;
+    }
+    main .planning .item{
+        padding:8px;
+    }
+    .container .right-section .stats .item{
+        height:160px;
+        padding: 20px;
+    }
+    .container ,.right-section .stats .item .top p{
+        font-size:14px;
+    }
+    .container .right-section .stats .item .bottom h3{
+        font-size:36px;
+    }
+} 
 
 
- 
+
